# mpfree

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  mpfree.rc
.github/workflows/: release.yaml
src/: app.rs  main.rs  paths.rs  ui.rs
