[package]
name = "mpfree"
version = "0.1.0-alpha"
edition = "2024"
authors = ["Petros Baloglou"]
description = "Lightweight youtube-to-mp3 converter built with Rust and egui"
license = "GPL-3.0-only"

[dependencies]
eframe = { version = "0.28", default-features = false, features = ["accesskit", "default_fonts", "glow"] }

[profile.release]
opt-level = "z"
strip = true
lto = true