[package]
name = "mpfree"
version = "0.1.0-alpha"
edition = "2024"
authors = ["Petros Baloglou"]
description = "Lightweight youtube-to-mp3 converter built with Rust and egui"
license = "GPL-3.0-only"

[dependencies]
eframe = { version = "0.28", features = ["accesskit", "default_fonts", "glow"] }
rfd = "0.15"
egui_extras = { version = "0.28", features = ["image"] }

[profile.release]
opt-level = "z"
strip = true
lto = true